<resources>


    <string name="app_name">                        Noe Tapt, Noe Funnet</string>
    <string name="submit_button">                   Lag Anonnse</string>
    <string name="header_make_post_found_item">     Lag en kort beskrivelse av hva du har funnet</string>
    <string name="nameOfItem">                      Navn på gjenstand</string>
    <string name="item_descripstion">               Beskrivelse</string>
    <string name="color_of_item">                   Hvilken farge er den?</string>
    <string name="date_found">                      Når var den funnet?</string>
    <string name="contact_infromation">             Kontaktinfromasjon</string>
    <string name="post_found_button">               Post funnet gjenstand</string>
    <string name="chooseImg">                       Velg bilde</string>
    <string name="capture_btn">                     Ta et bilde</string>
    <string name="uploadBtnText">                   Last opp</string>
    <string name="header_make_post_lost_item">      Lag en kort beskrivelse av hva du har mistet</string>
    <string name="post_lost_button">                Post mistet gjenstand</string>
    <string name="title_activity_maps_full_screen"> Map</string>
    <string name="Navn">                            Navn</string>
    <string name="Farge">                           Farge</string>
    <string name="Besk">                            Beskrivelse</string>
    <string name="Cont">                            Kontaktinformasjon</string>
    <string name="done_date_button">Ferdig</string>
    <string name="desc_hint">Skriv inn en beskrivelse på gjenstanden</string>
    <string name="done_description_button">Ferdig</string>




    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_my_account">MyAccount</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="sorter">Sorter</string>
    <string name="s_k">Søk</string>
    <string name="lokasjon">Lokasjon</string>
    <string name="konto">Konto</string>
    <string name="type">TYPE</string>
    <string name="dato">DATO</string>
</resources>