<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <data>

        <variable
            name="viewModel"
            type="com.example.noeTaptNoeFunnetAPP.post_item.FormViewModel" />
    </data>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.noeTaptNoeFunnetAPP.post_item.FormFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/image"
                android:layout_width="336dp"
                android:layout_height="249dp"
                android:layout_marginTop="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.493"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/placeholder_image"
                android:src="@{viewModel.image}"/>

            <RelativeLayout
                android:id="@+id/image_button_container"
                android:layout_width="fill_parent"
                android:layout_height="70dp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="16dp"
                android:background="@color/ContainerPostDark"
                app:layout_constraintTop_toBottomOf="@+id/image"
                tools:ignore="MissingConstraints">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <ImageView
                        android:id="@+id/choose_image"
                        android:layout_width="77dp"
                        android:layout_height="55dp"

                        android:layout_alignParentLeft="true"
                        android:layout_alignParentBottom="true"

                        android:layout_marginStart="86dp"
                        android:layout_marginEnd="45dp"
                        android:text="@string/chooseImg"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/capture_btn"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/browse_image" />

                    <ImageView
                        android:id="@+id/capture_btn"
                        android:layout_width="77dp"
                        android:layout_height="55dp"
                        android:layout_marginEnd="86dp"
                        android:text="@string/capture_btn"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/choose_image"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/take_picture_icon" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/text_field_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="16dp"
                android:background="@color/ContainerPostDark"
                app:layout_constraintTop_toBottomOf="@+id/image_button_container">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/nameOfItem"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:ems="10"
                        android:hint="@string/nameOfItem"
                        android:inputType="textPersonName"
                        android:onTextChanged="@{viewModel.setNameItem}"
                        android:text="@{viewModel.savedNameItem}"
                        android:maxLength="50"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                    <TextView
                        android:id="@+id/description"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:background="?attr/editTextBackground"
                        android:ems="10"
                        android:maxLength="80"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:hint="@string/item_descripstion"
                        android:includeFontPadding="false"
                        android:textSize="18sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/nameOfItem" />

                    <EditText
                        android:id="@+id/colordescription"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:ems="10"
                        android:hint="@string/color_of_item"
                        android:maxLength="20"
                        android:inputType="textPersonName"
                        android:onTextChanged="@{viewModel.setColor}"
                        android:text="@{viewModel.savedColor}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/description" />

                    <TextView
                        android:id="@+id/timewhenfound"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:background="?attr/editTextBackground"
                        android:ems="10"
                        android:hint="@string/date_found"
                        android:text="@{viewModel.savedTime}"
                        android:textSize="18sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/colordescription"
                        android:importantForAutofill="no" />

                    <EditText
                        android:id="@+id/contactinformation"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:ems="10"
                        android:hint="@string/contact_infromation"
                        android:inputType="textPersonName"
                        android:onTextChanged="@{viewModel.setContact}"
                        android:text="@{viewModel.savedContact}"
                        android:maxLength="50"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/timewhenfound"
                        android:importantForAutofill="no" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </RelativeLayout>

            <fragment
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_field_container"
                />




            <com.google.android.material.button.MaterialButton
                android:id="@+id/post_button_found_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="32dp"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/map"
                android:theme="@style/Materialtheme"
                android:outlineAmbientShadowColor="@color/SecondaryAccent"
                android:backgroundTint="@color/MainAccent"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>